fixed alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,8 +13,8 @@ body {
   height: 100%;
 }
 .color {
-  width: 250px;
-  height: 100px;
+  width: 200px;
+  height: 125px;
   margin: 20px;
   padding: 20px;
   text-align: center;
